# nexium

./: .gitignore  .pre-commit-config.yaml  README.md  pyinstaller.py  pyproject.toml  requirements.txt  sample.envrc
.github/workflows/: python-publish.yml
nexium/: __init__.py  background.py  binding.py  connections.py  event_core_queue.py  event_core_value.py  globals.py  import_sys.py  javascript_.py  outbox.py  setup.py  timer.py
nexium/js/: nexium.js
pynexium/: __init__.py  background.py  connections.py  globals.py  outbox.py  server_event.py
pynexium/js/: nexium.js
